src/objects/Student_Roster__c.object
<CustomObject>
    <fields>
        <fullName>AcademicStatus__c</fullName>
        <label>AcademicStatus</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMailAddress__c</fullName>
        <label>EMailAddress</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmergencyContact__c</fullName>
        <label>EmergencyContact</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeAddr__c</fullName>
        <label>HomeAddr</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>HomePhone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalAddr__c</fullName>
        <label>LocalAddr</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentID__c</fullName>
        <label>PaymentID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramID__c</fullName>
        <label>ProgramID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudID__c</fullName>
        <externalId>true</externalId>
        <label>StudID</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StudentName__c</fullName>
        <label>StudentName</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Student Roster</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StudID__c</columns>
        <columns>StudentName__c</columns>
        <columns>EMailAddress__c</columns>
        <columns>HomeAddr__c</columns>
        <columns>HomePhone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>sfid-{000}</displayFormat>
        <label>Student SF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>